# chatbot

./: .gitignore  app.py  pyproject.toml
knowledge_base/: company_policies.txt  employee_benefits.txt  technical_support.txt
